First test integrating swagger generated client
