# angular-template/src/app/swagger/model/Category.ts
@@ -1,0 +1,36 @@
+/**
+ * Forum Engine API
+ * Forum Engine API
+ *
+ * OpenAPI spec version: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by the swagger code generator program.
+ * https://github.com/swagger-api/swagger-codegen.git
+ * Do not edit the class manually.
+ */
+
+import * as models from './models';
+
+export interface Category {
+    /**
+     * Category name
+     */
+    name?: string;
+
+    /**
+     * Description of the category
+     */
+    description?: string;
+
+    /**
+     * When category was created
+     */
+    createdAt?: string;
+
+    /**
+     * When category was updated
+     */
+    updatedAt?: string;
+
+}
