# angular-template/src/app/swagger/model/SuccessList.ts
@@ -1,0 +1,35 @@
+/**
+ * Forum Engine API
+ * Forum Engine API
+ *
+ * OpenAPI spec version: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by the swagger code generator program.
+ * https://github.com/swagger-api/swagger-codegen.git
+ * Do not edit the class manually.
+ */
+
+import * as models from './models';
+
+export interface SuccessList {
+    pagination?: models.Pagination;
+
+    /**
+     * List of *
+     */
+    records?: any;
+
+    /**
+     * Name of the resource beeing returned
+     */
+    resource?: SuccessList.ResourceEnum;
+
+}
+export namespace SuccessList {
+    export enum ResourceEnum {
+        User = <any> 'user',
+        Forum = <any> 'forum',
+        Category = <any> 'category'
+    }
+}
