# angular-template/src/app/swagger/model/models.ts
@@ -1,0 +1,8 @@
+export * from './Category';
+export * from './Forum';
+export * from './ForumUser';
+export * from './ModelError';
+export * from './Pagination';
+export * from './SettingsForum';
+export * from './Success';
+export * from './SuccessList';
