# swagger.yaml
@@ -6,7 +6,7 @@ info:
   description: Forum Engine API 
   version: "1.0.0"
 # the domain of the service
-host: gforum-engine.appspot.com
+host: gforumengine.appspot.com
 # array of all schemes that your API supports
 schemes:
   - http
@@ -57,8 +57,6 @@ paths:
           schema:
             $ref: '#/definitions/Error'
             
-      
-            
   /users:
     get:
       summary: Users List
@@ -71,7 +69,7 @@ paths:
           schema: 
             type: array
             items:
-              $ref: '#/definitions/ForumUser'
+              $ref: '#/definitions/SuccessList'
         default:
           description: Unexpected error
           schema:
@@ -82,6 +80,12 @@ paths:
         Saves a new User
       tags:
         - Users
+      parameters:
+        - name: body
+          in: body
+          description: User object
+          schema:
+            $ref: '#/definitions/ForumUser'
       responses:
         200:
           description: Return the new User
@@ -93,6 +97,72 @@ paths:
           description: Unexpected error
           schema:
             $ref: '#/definitions/Error'
+  
+  /users/{id}:
+    get:
+      summary: Get User
+      description: Return a User by id
+      tags:
+        - User
+      parameters:
+        - name: id
+          in: path
+          type: number
+          format: integer
+          required: true
+      responses:
+        200:
+          description: Return a User
+          schema:
+            $ref: '#/definitions/ForumUser'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
+            
+    put:
+      summary: Updates a User
+      description: Update a user
+      tags:
+        - User
+      parameters:
+        - name: id
+          in: path
+          type: string
+          required: true
+        - name: body
+          in: body
+          schema:
+            $ref: '#/definitions/ForumUser'
+      responses:
+        200:
+          description: Return the updated user
+          schema:
+            $ref: '#/definitions/ForumUser'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
+    delete:
+      summary: Delete a User
+      description: Delete a user by its id
+      tags:
+        - User
+      parameters:
+        - name: id
+          in: path
+          type: string
+          required: true
+      responses:
+        200:
+          description: Return the sucessful operation
+          schema:
+            $ref: '#/definitions/Success'
+        default:
+          description: Retorn the error object
+          schema:
+            $ref: '#/definitions/Error'
+  
           
   /forums:
     get:
@@ -194,70 +264,6 @@ paths:
           schema:
             $ref: '#/definitions/Error'
   
-  /users/{id}:
-    get:
-      summary: Get User
-      description: Return a User by id
-      tags:
-        - User
-      parameters:
-        - name: id
-          in: path
-          type: number
-          format: integer
-          required: true
-      responses:
-        200:
-          description: Return a User
-          schema:
-            $ref: '#/definitions/ForumUser'
-        default:
-          description: Unexpected error
-          schema:
-            $ref: '#/definitions/Error'
-            
-    put:
-      summary: Updates a User
-      description: Update a user
-      tags:
-        - User
-      parameters:
-        - name: id
-          in: path
-          type: string
-          required: true
-        - name: user
-          in: body
-          schema:
-            $ref: '#/definitions/ForumUser'
-      responses:
-        200:
-          description: Return the updated user
-          schema:
-            $ref: '#/definitions/ForumUser'
-        default:
-          description: Unexpected error
-          schema:
-            $ref: '#/definitions/Error'
-    delete:
-      summary: Delete a User
-      description: Delete a user by its id
-      tags:
-        - User
-      parameters:
-        - name: id
-          in: path
-          type: string
-          required: true
-      responses:
-        200:
-          description: Return the sucessful operation
-          schema:
-            $ref: '#/definitions/Success'
-        default:
-          description: Retorn the error object
-          schema:
-            $ref: '#/definitions/Error'
             
   /settings/forum:
     get:
@@ -286,21 +292,12 @@ definitions:
       description:
         type: string
         description: Description of the category
-      parentCategory:
-        $ref: '#/definitions/Category'
-      dataTroca:
+      createdAt: 
         type: string
-        description: Data que foi realizada a troca
-      produtosRecebidos:
-        type: array
-        items:
-          $ref: '#/definitions/Category'
-      valorDiferenca:
-        type: number
-        format: double
-      dataCriacao:
+        description: When category was created
+      updatedAt:
         type: string
-        description: Data da criação do registro da troca
+        description: When category was updated
     
   ForumUser:
     type: object
@@ -400,6 +397,9 @@ definitions:
   Success:
     type: object
     properties:
+      code:
+        type: integer
+        description: Response code
       response: 
         type: string
         enum:
@@ -412,6 +412,17 @@ definitions:
     properties:
       pagination:
         $ref: '#/definitions/Pagination'
+      records:
+        type: object
+        description: List of *
+      resource:
+        type: string
+        description: Name of the resource beeing returned
+        enum:
+          - user
+          - forum
+          - category
+        
       
   Pagination:
     type: object
@@ -428,7 +439,15 @@ definitions:
         type: number
         format: integer
         description: Total of records
-      totalPages:
+      begin:
+        type: number
+        format: integer
+        description: Beginning of the list
+      end:
+        type: number
+        format: integer
+        description: End of the list
+      pages:
         type: number
         format: integer
         description: Total of pages
